--- a/templates/management/show_user.html
+++ b/templates/management/show_user.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="#contacts">Contact Us</a>
                     </li>
                 </ul>
-                <button class="btn btn-outline-success" style="margin-right:10px;"><a class="nav-link" href="#about">Log Out</a></button>
+                <button class="btn btn-outline-success" style="margin-right:10px;"><a class="nav-link" href="/logout">Log Out</a></button>
             </div>
         </div>
     </nav>
