--- a/templates/customer/past_orders.html
+++ b/templates/customer/past_orders.html
@@ -7,6 +7,14 @@
     <title>DineEase</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <script>
+        async function rate (from, to) {
+            let rating = ~~prompt('Rate on a scale of 1 to 5');
+            while (![1, 2, 3, 4, 5].find(e => e === rating)) rating = ~~prompt('Invalid input. Rate on a scale of 1 to 5');
+            await axios.post('/rate', { from, to, rating } );
+            alert('Rating has been updated');
+        }
+    </script>
 </head>
 
 <body>
@@ -93,6 +101,19 @@
             {% endif %}
         </div>
     </div>
+    <div class="row">
+        <div class="col"></div>
+        <div class="col">
+            {% if order.status == 'Delivered' %}
+            <button class="btn btn-warning" onclick="rate('{{ self_user }}', '{{ order.restaurant_id }}')">Rate Restaurant</button>
+            {% endif %}
+        </div>
+        <div class="col">
+            {% if order.status == 'Delivered' %}
+            <button class="btn btn-warning" onclick="rate('{{ self_user }}', '{{ order.delivery_agent }}')">Rate Delivery Agent</button>
+            {% endif %}
+        </div>
+    </div>
     <br>
     <hr>
     {% endfor %}
@@ -100,6 +121,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
         crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
 </body>
 
 </html>
