--- a/templates/delivery/page.html
+++ b/templates/delivery/page.html
@@ -34,7 +34,10 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/delivery/past_orders">Past Orders</a>
                     </li>
                 </ul>
                 <button class="btn btn-outline-success" style="margin-right:10px;"><a class="nav-link"
