--- a/templates/delivery/past_orders.html
+++ b/templates/delivery/past_orders.html
@@ -14,6 +14,13 @@
             await axios.post('/rate', { from, to, rating } );
             alert('Rating has been updated');
         }
+
+        async function rate (from, to) {
+            let rating = ~~prompt('Rate on a scale of 1 to 5');
+            while (![1, 2, 3, 4, 5].find(e => e === rating)) rating = ~~prompt('Invalid input. Rate on a scale of 1 to 5');
+            await axios.post('/rate', { from, to, rating } );
+            alert('Rating has been updated');
+        }
     </script>
 </head>
 
@@ -31,6 +38,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/delivery/past_orders">Past Orders</a>
+                    </li>
                 </ul>
                 <button class="btn btn-outline-success" style="margin-right:10px;"><a class="nav-link" href="/logout">Logout</a></button>
                 
@@ -45,64 +55,33 @@
     <div class="row">
         <div class="col">
             <h5>
-                &nbsp;&nbsp;&nbsp;{{ order.restaurant }}
+                {{ order.restaurant }}
             </h5>
         </div>
         <div class="col">
-            <br>
-            <ul>
-                {% for item in order.order %}
-                <li>{{ item.name }} (x{{ item.qty }})</li>
-                {% endfor %}
-            </ul>
+            <h5>
+                {{ order.customer }}
+            </h5>
         </div>
         <div class="col">
             <div class="row">
-                <button class="btn btn-outline-success">Total Price= {{ order.price }} </button>
+                <b>Customer_Address: </b>
+                {{ order.address }}
             </div>
             <div class="row my-5">
+                <b> Customer_phone number:</b>
+                {{ order.phone }}
             </div>
         </div>
-
     </div>
     <div class="row">
         <div class="col">
-            <button class="btn btn-outline-success"><span style="color: black;">Order Status-</span><span
-                    style="color: green;">{{ order.status }}</span></button>
-        </div>
-        <div class="col">
-            {% if order.cooking_time %}
-                Cooking time: {{ order.cooking_time }} min
-            {% endif %}
-        </div>
-        <div class="col">
-            {% if order.pickup_time %}
-                Pickup time: {{ order.pickup_time }} min
-            {% endif %}
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
+            <button class="btn btn-outline-success"><span style="color: black;">Order Status-</span><span style="color: green;">{{ order.status }}</span></button>
         </div>
         <div class="col">
         </div>
         <div class="col">
-            {% if order.delivery_time %}
-                Delivery time: {{ order.delivery_time }} min
-            {% endif %}
-        </div>
-    </div>
-    <div class="row">
-        <div class="col"></div>
-        <div class="col">
-            {% if order.status == 'Delivered' %}
-            <button class="btn btn-warning" onclick="rate('{{ self_user }}', '{{ order.restaurant_id }}')">Rate Restaurant</button>
-            {% endif %}
-        </div>
-        <div class="col">
-            {% if order.status == 'Delivered' %}
-            <button class="btn btn-warning" onclick="rate('{{ self_user }}', '{{ order.delivery_agent }}')">Rate Delivery Agent</button>
-            {% endif %}
+            <button class="btn btn-warning" onclick="rate('{{ self_user }}', '{{ order.user }}')">Rate customer</button>
         </div>
     </div>
     <br>
